--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "googleapis": "^144.0.0",
+    "mime-types": "^2.1.35",
     "mongoose": "^8.7.1",
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
