--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "sharp": "^0.33.5"
   }
 }
