--- a/package.json
+++ b/package.json
@@ -5,20 +5,14 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
-    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "googleapis": "^144.0.0",
-    "mime-types": "^2.1.35",
     "mongoose": "^8.7.1",
-    "multer": "^1.4.5-lts.1",
-    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
-    "redis": "^4.7.0",
-    "sharp": "^0.33.5"
+    "redis": "^4.7.0"
   }
 }
